LP spacing fix

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -132,6 +132,9 @@ Hero
 Body
 =========================================== */
 
+.catalog {
+	padding-top: 100px;
+}
 .catalog-columns {
 	width: 42%;
 	margin-left: 8%;
